# ContourToSurfaceRegistration

./: CMakeLists.txt  README
src/: BinaryThresholdImageFilter.cxx  CMakeLists.txt  ContourToSurfaceRegistration.cxx  ContourToSurfaceRegistration.h  DistanceMapImageFilter.cxx
test/: CMakeLists.txt  ContourToSurfaceRegistrationTest1.cxx  E80_23109_00040.bmp.md5  canon_hist.nii.gz.md5
